# swagger1.json
@@ -1,219 +1,159 @@
 {
-    "swagger": "2.0",
-    "info": {
-      "title": "Events API",
-      "description": "A API that helps manage events.",
-      "version": "v1"
+  "swagger": "2.0",
+  "info": {
+    "title": "Events API",
+    "description": "An API that helps manage events.",
+    "version": "v1"
+  },
+  "basePath": "/v1",
+  "schemes": [
+    "http"
+  ],
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
+  ],
+  "paths": {
+    "/events": {
+      "get": {
+        "summary": "Get a list of all events",
+        "parameters": [
+          {
+            "name": "event_id",
+            "in": "query",
+            "type": "integer",
+            "required": false,
+            "description": "Optional event ID to filter by specific event"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of events.",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Event"
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "summary": "Create a new event",
+        "parameters": [
+          {
+            "name": "event",
+            "in": "body",
+            "description": "Event data",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Event"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Event created"
+          }
+        }
+      }
     },
-    "basePath": "/api",
-    "schemes": [
-      "http"
-    ],
-    "consumes": [
-      "app/json"
-    ],
-    "produces": [
-      "app/json"
-    ],
-    "paths": {
-      "/events": {
-        "get": {
-          "summary": "Returns all events available in database.",
-          "produces": [
-            "app/json"
-          ],
-          "responses": {
-            "200": {
-              "description": "Successful response.",
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "entity_id": {
-                        "type": "string",
-                        "description": "ID of the event"
-                      }
-                    }
-                  }
-                }
+    "/events/{event_id}": {
+      "get": {
+        "summary": "Get an event by ID",
+        "parameters": [
+          {
+            "name": "event_id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "description": "ID of the event to retrieve"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Detailed information about an event",
+            "schema": {
+              "$ref": "#/definitions/Event"
             }
           }
-        },
-        "post": {
-          "summary": "Adds new event.",
-          "produces": [
-            "app/json"
-          ],
-          "responses": {
-            "200": {
-              "description": "Successful response.",
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "entity_id": {
-                        "type": "string",
-                        "description": "ID of the event"
-                      }
-                    }
-                  }
-                }
-            }
-          }
-        },
-        
-          "delete": {
-            "summary": "Deletes an event.",
-            "produces": [
-              "app/json"
-            ],
-            "responses": {
-              "200": {
-                "description": "Successful response.",
-                  "schema": {
-                    "type": "array",
-                    "items": {
-                      "type": "object",
-                      "properties": {
-                        "entity_id": {
-                          "type": "string",
-                          "description": "ID of the event"
-                        }
-                      }
-                    }
-                  }
-              }
-            }
+        }
+      },
+      "put": {
+        "summary": "Update an existing event",
+        "parameters": [
+          {
+            "name": "event_id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "description": "ID of the event to update"
           },
-          "put": {
-            "summary": "Updates an event.",
-            "produces": [
-              "app/json"
-            ],
-            "responses": {
-              "200": {
-                "description": "Successful response.",
-                  "schema": {
-                    "type": "array",
-                    "items": {
-                      "type": "object",
-                      "properties": {
-                        "entity_id": {
-                          "type": "string",
-                          "description": "ID of the event"
-                        }
-                      }
-                    }
-                  }
-              }
+          {
+            "name": "event",
+            "in": "body",
+            "description": "Event data",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Event"
             }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Event updated"
           }
         }
       },
-      "/events?id": {
-        "get": {
-          "summary": "Returns a specific event.",
-          "produces": [
-            "app/json"
-          ],
-          "responses": {
-            "200": {
-              "description": "Successful response.",
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "entity_id": {
-                        "type": "string",
-                        "description": "ID of the event"
-                      }
-                    }
-                  }
-                }
-            }
+      "delete": {
+        "summary": "Delete an event",
+        "parameters": [
+          {
+            "name": "event_id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "description": "ID of the event to delete"
           }
-        }
-      },
-      "/event?type": {
-        "get": {
-          "summary": "Returns all events of a specific type.",
-          "produces": [
-            "app/json"
-          ],
-          "responses": {
-            "200": {
-              "description": "Successful response.",
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "entity_id": {
-                        "type": "string",
-                        "description": "ID of the event"
-                      }
-                    }
-                  }
-                }
-            }
-          }
-        }
-      },
-      "/events?date": {
-        "get": {
-          "summary": "Returns all events of a specific date.",
-          "produces": [
-            "app/json"
-          ],
-          "responses": {
-            "200": {
-              "description": "Successful response.",
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "entity_id": {
-                        "type": "string",
-                        "description": "ID of the event"
-                      }
-                    }
-                  }
-                }
-            }
-          }
-        }
-      },
-      "/events?location":{
-        "get": {
-          "summary": "Returns all events of a specific location.",
-          "produces": [
-            "app/json"
-          ],
-          "responses": {
-            "200": {
-              "description": "Successful response.",
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "entity_id": {
-                        "type": "string",
-                        "description": "ID of the event"
-                      }
-                    }
-                  }
-                }
-            }
+        ],
+        "responses": {
+          "204": {
+            "description": "Event deleted"
           }
         }
       }
     }
-      
-    
-
-       
+  },
+  "definitions": {
+    "Event": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "description": " of the event"
+        },
+        "date": {
+          "type": "string",
+          "format": "date-time",
+          "description": "Date of the event"
+        },
+        "type": {
+          "type": "string",
+          "description": "Type of the event"
+        },
+        "location": {
+          "type": "string",
+          "description": "Location of the event"
+        },
+        "price": {
+          "type": "number",
+          "format": "float",
+          "description": "Price of the event"
+        }
+      },
+      "required": ["name","date", "type", "location", "price"]
+    }
+  }
+}
